--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
 <p>
     <a href="进度条系列/动态进度条.html" target="_blank">动态进度条</a>
 </p>
+<p>
+    <a href="toastr提示信息/toastr示例.html" target="_blank">toastr示例</a>
+</p>
+<p>
+    <a href="博客首页/blog.html" target="_blank">博客首页</a>
+</p>
+<p>
+    <a href="后台管理页面/后台首页.html" target="_blank">后台首页</a>
+</p>
+
+
 
 </body>
 </html>
