--- a/后台管理页面/后台首页.html
+++ b/后台管理页面/后台首页.html
@@ -96,7 +96,7 @@
                         <input type="text" class="form-control" id="table-search" placeholder="输入搜索内容">
                     </div>
                     <button class="btn btn-primary">搜索</button>
-                    <button class="btn btn-success pull-right">添加</button>
+                    <button class="btn btn-success pull-right" data-toggle="modal" data-target="#myModal">添加</button>
                 </form>
             </div>
         </div>
@@ -257,7 +257,46 @@
                 </div>
             </div>
         </div>
-
+        <!-- 模态框 -->
+        <div id="myModal" class="modal fade" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <!-- 模态框标题 -->
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title">添加资产信息</h4>
+                    </div>
+                    <!-- 模态框内容 -->
+                    <div class="modal-body">
+                        <form class="form-horizontal">
+                            <div class="form-group">
+                                <label for="firstname" class="col-sm-2 control-label">assest</label>
+                                <div class="col-sm-10">
+                                    <input type="email" class="form-control" id="firstname" placeholder="输入资产名">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="secondname" class="col-sm-2 control-label">number</label>
+                                <div class="col-sm-10">
+                                    <input type="email" class="form-control" id="secondname" placeholder="输入资产数量">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="username" class="col-sm-2 control-label">Username</label>
+                                <div class="col-sm-10">
+                                    <input type="password" class="form-control" id="username" placeholder="输入用户名">
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <!-- 模态框底部 - 系列按钮 -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                        <button type="button" class="btn btn-primary">保存</button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
     </div>
 </div>
 
