--- a/后台管理页面/后台首页.html
+++ b/后台管理页面/后台首页.html
@@ -263,7 +263,8 @@
                 <div class="modal-content">
                     <!-- 模态框标题 -->
                     <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                aria-hidden="true">&times;</span></button>
                         <h4 class="modal-title">添加资产信息</h4>
                     </div>
                     <!-- 模态框内容 -->
