--- a/后台管理页面示例(修改dashboard)/后台管理页面示例.html
+++ b/后台管理页面示例(修改dashboard)/后台管理页面示例.html
@@ -69,7 +69,9 @@
         <!-- 页面主体内容 -->
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <!-- 主题内容的标题 -->
-            <h1 class="page-header">后台管理 <small>学生管理</small></h1>
+            <h1 class="page-header">后台管理
+                <small>学生管理</small>
+            </h1>
 
             <!-- 面板开始 -->
             <div class="panel panel-primary">
@@ -152,7 +154,8 @@
                     <div class="modal-content">
                         <!-- 模态框标题 -->
                         <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                    aria-hidden="true">&times;</span></button>
                             <h4 class="modal-title">添加学生信息</h4>
                         </div>
                         <!-- 模态框内容 -->
@@ -161,13 +164,15 @@
                                 <div class="form-group">
                                     <label for="firstname" class="col-sm-2 control-label">First name</label>
                                     <div class="col-sm-10">
-                                        <input type="email" class="form-control" id="firstname" placeholder="输入firstname">
+                                        <input type="email" class="form-control" id="firstname"
+                                               placeholder="输入firstname">
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="secondname" class="col-sm-2 control-label">Second name</label>
                                     <div class="col-sm-10">
-                                        <input type="email" class="form-control" id="secondname" placeholder="输入secondname">
+                                        <input type="email" class="form-control" id="secondname"
+                                               placeholder="输入secondname">
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -191,7 +196,6 @@
         </div>
     </div>
 </div>
-
 
 
 <!-- 引入jQuery -->
