--- a/模态框及轮播图/Bootstrap实现模态框.html
+++ b/模态框及轮播图/Bootstrap实现模态框.html
@@ -23,7 +23,8 @@
         <div class="modal-content">
             <!-- 模态框标题 -->
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
+                </button>
                 <h4 class="modal-title">模态框的标题</h4>
             </div>
             <!-- 模态框内容 -->
