--- a/登录注册页面/注册页面.html
+++ b/登录注册页面/注册页面.html
@@ -9,13 +9,15 @@
     <!-- 引入normalize.css -->
     <link href="https://cdn.bootcss.com/normalize/8.0.0/normalize.css" rel="stylesheet">
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <style>
-        body{
+        body {
             background: #eeeeee;
         }
-        #form-box{
+
+        #form-box {
             margin-top: 199px;
         }
     </style>
@@ -29,16 +31,16 @@
                 <form class="form-horizontal">
                     <h3 class="text-center">请注册</h3>
                     <div class="form-group">
-                            <input type="email" class="form-control" id="inputEmail3" placeholder="输入用户名">
+                        <input type="email" class="form-control" id="inputEmail3" placeholder="输入用户名">
                     </div>
                     <div class="form-group">
-                            <input type="password" class="form-control" id="inputPassword2" placeholder="输入密码">
+                        <input type="password" class="form-control" id="inputPassword2" placeholder="输入密码">
                     </div>
                     <div class="form-group">
-                            <input type="password" class="form-control" id="inputPassword3" placeholder="再次输入密码">
+                        <input type="password" class="form-control" id="inputPassword3" placeholder="再次输入密码">
                     </div>
                     <div class="form-group">
-                            <button type="submit" class="btn btn-primary btn-block">注册</button>
+                        <button type="submit" class="btn btn-primary btn-block">注册</button>
                     </div>
                 </form>
             </div>
