--- a/进度条系列/动态进度条.html
+++ b/进度条系列/动态进度条.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <title>动态进度条</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
 
 <div class="container">
     <div class="progress">
-        <div id="myBar" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0"
+        <div id="myBar" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45"
+             aria-valuemin="0"
              aria-valuemax="100" style="width: 0%">
             0%
         </div>
@@ -32,13 +34,14 @@
     var t;
 
     var $myBar = $("#myBar");
+
     function changeWidth() {
-        if (width < 100){
+        if (width < 100) {
             // 自加1
-            width = width+1;
+            width = width + 1;
             // 修改width属性
-            $myBar.css("width",width+"%").text(width+"%");
-        }else {
+            $myBar.css("width", width + "%").text(width + "%");
+        } else {
             // 清除定时器
             clearInterval(t);
         }
