--- a/index.html
+++ b/index.html
@@ -5,47 +5,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>bootstrap-tips</title>
+    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <style>
-
+        p a{
+            padding-right: 9px;
+        }
     </style>
 </head>
 <body>
 
-<h3>以下是本人学习bootstrap的一些练习</h3>
-<p>
-    <a href="信息收集卡/信息收集卡.html" target="_blank">信息收集卡</a>
-</p>
-<p>
-    <a href="信息收集卡/信息收集卡完整实现.html" target="_blank">信息收集卡完整实现</a>
-</p>
-<p>
-    <a href="后台管理页面示例(修改dashboard)/后台管理页面示例.html" target="_blank">后台管理页面示例</a>
-</p>
-<p>
-    <a href="模态框及轮播图/Bootstrap实现模态框.html" target="_blank">Bootstrap实现模态框</a>
-</p>
-<p>
-    <a href="模态框及轮播图/Bootstrap实现轮播图.html" target="_blank">Bootstrap实现轮播图</a>
-</p>
-<p>
-    <a href="登录注册页面/登录页面.html" target="_blank">登录页面</a>
-</p>
-<p>
-    <a href="登录注册页面/注册页面.html" target="_blank">注册页面</a>
-</p>
-<p>
-    <a href="进度条系列/动态进度条.html" target="_blank">动态进度条</a>
-</p>
-<p>
-    <a href="toastr提示信息/toastr示例.html" target="_blank">toastr示例</a>
-</p>
-<p>
-    <a href="博客首页/blog.html" target="_blank">博客首页</a>
-</p>
-<p>
-    <a href="后台管理页面/后台首页.html" target="_blank">后台首页</a>
-</p>
-
+<div class="container text-center">
+    <h3>以下是本人学习bootstrap的一些练习: </h3>
+    <p>
+        <a href="信息收集卡/信息收集卡.html" target="_blank">信息收集卡</a>
+        <a href="信息收集卡/信息收集卡完整实现.html" target="_blank">信息收集卡完整实现</a>
+    </p>
+    <p>
+        <a href="后台管理页面示例(修改dashboard)/后台管理页面示例.html" target="_blank">后台管理页面示例</a>
+    </p>
+    <p>
+        <a href="模态框及轮播图/Bootstrap实现模态框.html" target="_blank">Bootstrap实现模态框</a>
+        <a href="模态框及轮播图/Bootstrap实现轮播图.html" target="_blank">Bootstrap实现轮播图</a>
+    </p>
+    <p>
+        <a href="登录注册页面/登录页面.html" target="_blank">登录页面</a>
+        <a href="登录注册页面/注册页面.html" target="_blank">注册页面</a>
+    <p>
+        <a href="进度条系列/动态进度条.html" target="_blank">动态进度条</a>
+        <a href="toastr提示信息/toastr示例.html" target="_blank">toastr示例</a>
+    </p>
+    <p>
+        <a href="博客首页/blog.html" target="_blank">博客首页</a>
+        <a href="后台管理页面/后台首页.html" target="_blank">后台首页</a>
+    </p>
+    <p>
+        <a href="提示框弹出框警告框系列/提示框弹出框警告框系列.html" target="_blank">提示框弹出框警告框系列</a>
+    </p>
+</div>
 
 </body>
 </html>
